Sigil v0.3.1 ADD_DATE
    - fixed a validation issue caused by Sigil using "application/x-font-opentype" as the OPF
    mimetype instead of "application/vnd.ms-opentype"
    - fixed a crash when opening the TOC editor for some epub files (issue #654)

Sigil v0.3.0 2010.11.02
    - root rights no longer needed to install on Linux
    - fixed an issue with some child headings being attached to incorrect parent headings in the 
    TOC if the parent was marked as "not in TOC" (issue #476)
    - fixed an issue with some UTF-8 characters outside the BMP (usually CJK characters) not being
    saved properly (issue #180)    
    - fixed an issue with certain path types not being correctly updated as a result of the 
    fix for issue #501 (issue #561)
    - the Book Browser now prevents adding files that already exist in the epub
    - previously, when adding external XHTML files through the Book Browser, any files (like CSS 
    stylesheets or images) that were linked from that file were included in the epub under a 
    different name if their original name was "taken"; this caused duplicates so this behavior 
    has changed: files whose names are "taken" are now skipped over (issue #482)    
    - fixed a rare issue that caused incorrect path updates for anchor links pointing to file names
    that were suffixes of other chapter file names, and the anchor had a fragment ID (issue #598)  
    - fixed an issue with the image paths in background-image CSS rules not being updated when
    the path changes (issue #594)
    - Sigil now informs the user that DRMed files cannot be opened, instead of just crashing
    (issue #624)
    - this time *really* fixed the "acknowledgments" error that was reported as fixed in RC1
    - fixed a crash on load (with an error dialog) issue on Linux systems occurring when multiple
    users on the same machine tried to use Sigil (issue #642)
    - fixed a randomly occurring crash, usually triggered on Macs during loading (issue #643) 
